--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
 
   # db is is db folder
   db:
+    container_name: db
     build: db/.
     command: --default-authentication-plugin=mysql_native_password
     restart: always
